--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,32 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+*{
+  background-color: #1D1F20;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.content {
+  /* width:100%; */
+  /* height: 600px; */
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  text-align: center;  
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  padding: 10px;
+  
+}
+
+.chart{
+  font-weight: bold;
+  display: inline-block;
+  width: 85%;
+  opacity: 90%;
+}
+.chart:nth-last-child(odd){
+  padding-top: 10px;
+}
+.chart:hover{
+  opacity: 100%;
+}
+.title{
+  font-size: 18px;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  font-weight: 900;
 }
